--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -635,5 +635,5 @@ Please follow the instructions there to make your enterprise visible on the Open
   price_graph: "Price graph"
   included_tax: "Included tax"
   remove_tax: "Remove tax"
-  current_version: "Current Version"
-  version_not_found: " Version not found"
+  current_version: "Current version"
+  version_not_found: "Version not found"
